attempting to fix Vista/IE display bug that causes the text in the Telephone field to overlap the Letter field on the constituency page

--- a/public/stylesheets/fymp.css
+++ b/public/stylesheets/fymp.css
@@ -80,7 +80,7 @@ label.checkbox_label {
 .row_item {
   padding-top: 0.7em;
   clear: both;
-  height: 25px;
+  min-height: 25px;
 }
 .row_label {
   float: left;
